kubernetes/base/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: dev

spec:
  selector:
    app: user-service

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
